--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <title>Photo-genius</title>
     <script src="https://kit.fontawesome.com/6a2980ba02.js" crossorigin="anonymous"></script>
   </head>
   <body>
